--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = perl-Business-ISMN
 url = https://cpan.metacpan.org/authors/id/B/BD/BDFOY/Business-ISMN-1.201.tar.gz
 archives = http://http.debian.net/debian/pool/main/libb/libbusiness-ismn-perl/libbusiness-ismn-perl_1.131-1.debian.tar.xz deblicense/
-giturl = 
+giturl = https://github.com/briandfoy/business-ismn.git
 
 [autospec]
 # build 32 bit libraries
