--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = perl-Business-ISMN
-url = https://cpan.metacpan.org/authors/id/B/BD/BDFOY/Business-ISMN-1.202.tar.gz
+url = https://cpan.metacpan.org/authors/id/B/BD/BDFOY/Business-ISMN-1.203.tar.gz
 archives = http://http.debian.net/debian/pool/main/libb/libbusiness-ismn-perl/libbusiness-ismn-perl_1.131-1.debian.tar.xz deblicense/
 giturl = https://github.com/briandfoy/business-ismn.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
@@ -35,6 +37,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
